--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "axios": "^1.1.3",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "express-handlebars": "^6.0.6",
+        "handlebars": "^4.7.7",
         "nodemon": "^2.0.20"
     },
     "devDependencies": {
